| Bug #50412 | Assertion `! is_set()' failed in Diagnostics_area::set_ok_status at PREPARE | ||
|---|---|---|---|
| Submitted: | 18 Jan 2010 13:25 | Modified: | 6 Mar 2010 20:35 |
| Reporter: | John Embretsen | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server | Severity: | S1 (Critical) |
| Version: | bzr_5.6.0 (mysql-next-4284) | OS: | Any |
| Assigned to: | Jon Olav Hauglid | CPU Architecture: | Any |
| Tags: | rqg_pb2 | ||
[18 Jan 2010 13:25]
John Embretsen
[19 Jan 2010 9:43]
Philip Stoev
See also bug #49962
[19 Jan 2010 13:58]
Jon Olav Hauglid
Based on the core, the problem is that my_ok() is called when ER_SP_PROC_TABLE_CORRUPT (errno 1457) has already been set.
[20 Jan 2010 8:17]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/97488 3053 Jon Olav Hauglid 2010-01-20 Bug #50412 Assertion `! is_set()' failed in Diagnostics_area::set_ok_status at PREPARE The problem occured during processing of stored routines. Routines are loaded from mysql.proc, parsed and put into the sp cache by sp_cache_routine(). The assert occured because the return value from sp_cache_routine() was not checked for top level CALLs. This meant that any errors during sp_cache_routine() went unoticed and triggered the assert when my_ok() was later called. This is a regression introduced by the patch for Bug#30977, only visible in source trees with MDL and using debug builds of the server. This patch fixes the problem by checking the return value from sp_cache_routine() for top level CALLs and propagating any errors similar to what is done for other calls to sp_cache_routine(). No test case added.
[20 Jan 2010 10:10]
Jon Olav Hauglid
Pushed to mysql-next-4284 and merged to mysql-6.0-codebase-4284.
[16 Feb 2010 16:47]
Bugs System
Pushed into 6.0.14-alpha (revid:alik@sun.com-20100216101445-2ofzkh48aq2e0e8o) (version source revid:jon.hauglid@sun.com-20100120100711-9vpxnuwkwgh55e9v) (merge vers: 6.0.14-alpha) (pib:16)
[16 Feb 2010 16:56]
Bugs System
Pushed into mysql-next-mr (revid:alik@sun.com-20100216101208-33qkfwdr0tep3pf2) (version source revid:jon.hauglid@sun.com-20100120081731-1itayyo38bxgoi9j) (pib:16)
[25 Feb 2010 20:31]
Paul DuBois
Noted in 6.0.14 changelog. The return value for calls to put information into the stored routine cache were not consistently checked, causing an assertion to be raised. Setting report to Need Merge pending push of Celosia to release tree.
[6 Mar 2010 11:03]
Bugs System
Pushed into 5.5.3-m3 (revid:alik@sun.com-20100306103849-hha31z2enhh7jwt3) (version source revid:vvaintroub@mysql.com-20100216221947-luyhph0txl2c5tc8) (merge vers: 5.5.99-m3) (pib:16)
[6 Mar 2010 20:35]
Paul DuBois
Noted in 5.5.3 changelog.
